ResyncIntervalMs app setting

--- a/SpreadBot/appsettings.json
+++ b/SpreadBot/appsettings.json
@@ -5,6 +5,7 @@
   "BaseMarket": "ETH",
   "MinimumPrice": 0.00001000,
   "MinimumNegotiatedAmount": 0.00050000,
+  "ResyncIntervalMs": 60000,
   "SpreadConfigurations": [
     {
       "Guid": "1bc32efa-30b1-4550-8a8e-b5661a196e19",
