--- a/SpreadBot/SpreadBot.csproj
+++ b/SpreadBot/SpreadBot.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
