--- a/SpreadBot/appsettings.json
+++ b/SpreadBot/appsettings.json
@@ -1,21 +1,21 @@
 {
-  "ApiKey": "",
-  "ApiSecret": "",
-  "MaxNumberOfBots": 1,
-  "BaseMarket": "ETH",
-  "MinimumPrice": 0.00001000,
-  "MinimumNegotiatedAmount": 0.00050000,
+  "ApiKey": "24f0af5ed4fb466fa1704eca6ff533e6",
+  "ApiSecret": "8bf12fd1435049508d480652980b227a",
+  "MaxNumberOfBots": 3,
+  "MinimumPrice": 0.00000800,
+  "MinimumNegotiatedAmount": 0.00100000,
   "ResyncIntervalMs": 60000,
   "SpreadConfigurations": [
     {
+      "BaseMarket": "ETH",
       "Guid": "1bc32efa-30b1-4550-8a8e-b5661a196e19",
       "MaxPercentChangeFromPreviousDay": 40.0,
       "MinimumSpreadPercentage": 1.0,
-      "MinimumQuoteVolume": 10.0,
-      "AllocatedAmountOfBaseCurrency": 0.1,
-      "SpreadThresholdBeforeCancelingCurrentOrder": 0.00000020,
-      "MinutesForLoss": 20,
-      "MinimumProfitPercentage": 1.0
+      "MinimumQuoteVolume": 150.0,
+      "AllocatedAmountOfBaseCurrency": 0.3,
+      "SpreadThresholdBeforeCancelingCurrentOrder": 0.00000001,
+      "MinutesForLoss": 90,
+      "MinimumProfitPercentage": 0.6
     }
   ]
 }
