Huobi: Initial batch of fixes

--- a/SpreadBot/appsettings.json
+++ b/SpreadBot/appsettings.json
@@ -1,11 +1,23 @@
 {
-  "ApiKey": "24f0af5ed4fb466fa1704eca6ff533e6",
-  "ApiSecret": "8bf12fd1435049508d480652980b227a",
-  "MaxNumberOfBots": 3,
+  "ApiKey": "7yngd7gh5g-3f0db4a3-d59ab926-c228b",
+  "ApiSecret": "40ac280a-2fcb9bc3-93e6f3ca-11d76",
+  "AccountId": "25664208",
+  "MaxNumberOfBots": 0,
   "MinimumPrice": 0.00000800,
   "MinimumNegotiatedAmount": 0.00100000,
   "ResyncIntervalMs": 60000,
   "SpreadConfigurations": [
+    {
+      "BaseMarket": "ETH",
+      "Guid": "1bc32efa-30b1-4550-8a8e-b5661a196e19",
+      "MaxPercentChangeFromPreviousDay": 40.0,
+      "MinimumSpreadPercentage": 1.0,
+      "MinimumQuoteVolume": 150.0,
+      "AllocatedAmountOfBaseCurrency": 0.3,
+      "SpreadThresholdBeforeCancelingCurrentOrder": 0.00000001,
+      "MinutesForLoss": 90,
+      "MinimumProfitPercentage": 0.6
+    },
     {
       "BaseMarket": "ETH",
       "Guid": "1bc32efa-30b1-4550-8a8e-b5661a196e19",
