--- a/SpreadBot/SpreadBot.csproj
+++ b/SpreadBot/SpreadBot.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
